# usbredir-rs

./: Cargo.toml
usbredir-helper/: Cargo.toml  meson.build
usbredir-helper/build-aux/: cargo.sh  install.sh
usbredir-helper/data/: dbus-org.freedesktop.usbredir1.service.in  org.freedesktop.usbredir.policy  org.freedesktop.usbredir1.conf  org.freedesktop.usbredir1.policy  org.freedesktop.usbredir1.service
usbredir-helper/src/: main.rs
usbredirhost/: Cargo.toml
usbredirhost-sys/: Cargo.toml  build.rs
usbredirhost-sys/src/: lib.rs
usbredirhost/examples/: usbredir.rs
usbredirhost/src/: error.rs  lib.rs
usbredirhost/tests/: :w  host.rs
usbredirparser/: Cargo.toml
usbredirparser-sys/: Cargo.toml  Makefile  build.rs  wrapper.h
usbredirparser-sys/src/: bindgen.rs  filter.rs  lib.rs
usbredirparser/src/: error.rs  filter.rs  lib.rs  parser.rs  proto.rs
usbredirparser/tests/: filter.rs  parser.rs
