[package]
name = "usbredirhost-sys"
version = "0.2.0"
authors = [ "Marc-André Lureau <marcandre.lureau@redhat.com>" ]
description = "FFI bindings for usbredirhost"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "usbredirhost"
edition = "2018"

[build-dependencies]
pkg-config = "0.3.30"

[dependencies]
libusb1-sys = { version = "0.7" }
usbredirparser-sys = { path = "../usbredirparser-sys", version = "0.2" }
