[package]
name = "usbredirhost-sys"
version = "0.4.0"
authors = [ "Marc-André Lureau <marcandre.lureau@redhat.com>" ]
description = "FFI bindings for usbredirhost"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "usbredirhost"
edition = "2021"

[build-dependencies]
system-deps = "7.0"

[dependencies]
libusb1-sys = { version = "0.7" }
usbredirparser-sys = { path = "../usbredirparser-sys", version = "0.4" }

[package.metadata.system-deps]
usbredirhost = { name = "libusbredirhost", version = "0.13" }

