[package]
name = "usbredirhost"
version = "0.4.1"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
description = "Bindings for usbredirhost"
repository = "https://gitlab.freedesktop.org/elmarco/usbredir-rs"
homepage = "https://gitlab.freedesktop.org/spice/usbredir"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ffi = { package = "usbredirhost-sys", path = "../usbredirhost-sys", version = "0.4" }
parser = { package = "usbredirparser", path = "../usbredirparser", version = "0.4" }
libc = "0.2.155"
rusb = "0.9.4"

[dev-dependencies]
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
