[package]
name = "usbredirparser-sys"
version = "0.0.1"
authors = [ "Marc-André Lureau <marcandre.lureau@redhat.com>" ]
description = "FFI bindings for usbredirparser"
repository = "https://gitlab.freedesktop.org/elmarco/usbredir-rs"
homepage = "https://gitlab.freedesktop.org/spice/usbredir"
build = "build.rs"
license = "MIT OR Apache-2.0"
links = "usbredirparser"
edition = "2018"

[build-dependencies]
pkg-config = "0.3.2"
