[package]
name = "usbredirparser-sys"
version = "0.5.0"
authors = [ "Marc-André Lureau <marcandre.lureau@redhat.com>" ]
description = "FFI bindings for usbredirparser"
repository = "https://gitlab.freedesktop.org/elmarco/usbredir-rs"
homepage = "https://gitlab.freedesktop.org/spice/usbredir"
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
system-deps = "7.0"

[package.metadata.system-deps]
usbredirparser = { name = "libusbredirparser-0.5", version = "0.13" }
